# DL24-Dash

./: .gitignore  README.md  dl24_dash.py  dl24_manage.ipynb  pyproject.toml
dl24/: __init__.py
dl24_dash/: conf.py  main.py
dl24_dash/apps/: monitor.py  plot.py
dl24_dash/dl24/: __init__.py  dl24.py  dl24_data_store.py
dl24_dash/plotting/: __init__.py  plotting.py
