[project]
name = "dl24-electronic-load"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.6.1",
    "pyserial>=3.5",
    "plotly>=5.23.0",
    "numpy>=2.1.0",
    "polars>=1.5.0",
    "notebook>=7.2.1",
    "pandas>=2.2.2",
    "dash>=2.17.1",
    "typer>=0.12.4",
    "rich>=13.7.1",
    "pydantic>=2.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
