[project]
name = "dl24-dash"
version = "0.1.3"
description = "A tool for DL24 electronic load device with support for data visualization using dash."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "plotly>=5.23.0",
    "numpy>=2.1.0",
    "polars>=1.5.0",
    "dash>=2.17.1",
    "typer>=0.12.4",
    "rich>=13.7.1",
    "pydantic>=2.8.2",
]

[dependency-groups]
dev = [
    "ruff>=0.6.2",
    "pip>=25.1",
    "notebook>=7.2.1",
    "ipywidgets>=8.1.5",
]

[project.optional-dependencies]
build = ["setuptools"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project.scripts]
dl24-dash = "dl24_dash.main:app"
